# TestingExamples

./: CMakeLists.txt  README.md
.github/workflows/: googletest.yml
lib/: CMakeLists.txt
lib/include/examples/: deviations.hpp  irecruitment.hpp
lib/include/examples/internal/: recruitment.hpp
lib/src/: absum.hpp  deviations.cpp  recruitment.cpp
lib/tests/: CMakeLists.txt  benchmark_dlognorm.cpp  test_absum.cpp  test_dlognorm.cpp  test_recruitment.cpp
